Day 3/Ingress Workshop/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: custom-nginx-ing
spec:
  rules:
  - host: richard-douglas.workshop.nexjcloud.com
    http:
      paths:
      - backend:
          serviceName: custom-nginx-svc
          servicePort: 80
        path: /
